--- a/Voronoi/index.html
+++ b/Voronoi/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 	<link rel="stylesheet" href="/node_modules/mediaelement/build/mediaelementplayer.css" />
 	<!-- Shweebedy shwoo -->
-	<script type="text/javascript" src="/Vårrånåj/rhill-voronoi-core.js"></script>
+	<script type="text/javascript" src="/Voronoi/rhill-voronoi-core.js"></script>
 	<!-- Load the Paper.js library -->
 	<script type="text/javascript" src="/node_modules/paper/dist/paper-full.js"></script>
 	<!-- Load external PaperScript and associate it with myCanvas -->
