--- a/Examples/Example-05-smoothing/index.html
+++ b/Examples/Example-05-smoothing/index.html
@@ -4,9 +4,9 @@
 <!-- Load the Paper.js library -->
 <script type="text/javascript" src="/node_modules/paper/dist/paper-full.js"></script>
 <!-- Load external PaperScript and associate it with myCanvas -->
-<script type="text/paperscript" src="/Examples/Example-01/main.js" canvas="myCanvas">
+<script type="text/paperscript" src="/Examples/Example-05-smoothing/main.js" canvas="myCanvas">
 </script>
 </head>
 <body>
-	<canvas id="myCanvas" resize></canvas>
+	<canvas id="myCanvas" width="1200" height="900"></canvas>
 </body>
