--- a/Examples/Example-01-meta-balls/index.html
+++ b/Examples/Example-01-meta-balls/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--load styles-->
+<link rel="stylesheet" type="text/css" href="./styles.css">
 <!-- Load the Paper.js library -->
 <script type="text/javascript" src="/node_modules/paper/dist/paper-full.js"></script>
 <!-- Load external PaperScript and associate it with myCanvas -->
