--- a/Examples/Example-06-candy-crash/index.html
+++ b/Examples/Example-06-candy-crash/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--load styles-->
+<link rel="stylesheet" type="text/css" href="./styles.css">
 <!-- Load the Paper.js library -->
 <script type="text/javascript" src="/node_modules/paper/dist/paper-full.js"></script>
 <!-- Load external PaperScript and associate it with myCanvas -->
@@ -8,5 +10,5 @@
 </script>
 </head>
 <body>
-	<canvas id="myCanvas" width="1200" height="900"></canvas>
+		<canvas id="myCanvas" resize></canvas>
 </body>
