--- a/Examples/Example-06-candy-crash.1/index.html
+++ b/Examples/Example-06-candy-crash.1/index.html
@@ -6,10 +6,10 @@
 <!-- Load the Paper.js library -->
 <script type="text/javascript" src="/node_modules/paper/dist/paper-full.js"></script>
 <!-- Load external PaperScript and associate it with myCanvas -->
-<script type="text/paperscript" src="/Examples/Example-06-candy-crash/main.js" canvas="myCanvas">
+<script type="text/paperscript" src="/Examples/Example-06-candy-crash.1/main.js" canvas="myCanvas">
 </script>
 </head>
 <body>
 		<canvas id="myCanvas" resize></canvas>
-
+		
 </body>
