some of the code for wave example, will try to add fish to circle

--- a/Examples/Example-02-future-splash/index.html
+++ b/Examples/Example-02-future-splash/index.html
@@ -11,4 +11,17 @@
 </head>
 <body>
 		<canvas id="myCanvas" resize></canvas>
+
+		<!-- Same code as used in Klara and Lins final project programming 1 -->
+
+		<!-- Background sound: silence (to trigger wind sound) -->
+		<iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+    
+		<!--Background sound: wind-->
+		<audio autoplay="autoplay" loop>
+				<source src="waves.mp3" />     
+			</audio>
+
+			
+
 </body>
