fish finally added, still need to change the ocean

--- a/Examples/Example-02-future-splash/index.html
+++ b/Examples/Example-02-future-splash/index.html
@@ -10,6 +10,9 @@
 </script>
 </head>
 <body>
+
+	<!-- Image of fish added -->
+		<img id="fish" src="/Examples/Example-02-future-splash/fish.png">
 		<canvas id="myCanvas" resize></canvas>
 
 		<!-- Same code as used in Klara and Lins final project programming 1 -->
