--- a/Examples/Example-03-rounded-rectangles/index.html
+++ b/Examples/Example-03-rounded-rectangles/index.html
@@ -9,6 +9,6 @@
 <script type="text/paperscript" src="/Examples/Example-03-rounded-rectangles/main.js" canvas="myCanvas">
 </script>
 </head>
-<body>
+<body style="background-color: #f794e8";>
     <canvas id="myCanvas" resize></canvas>
 </body>
