--- a/Examples/Example-03-rounded-rectangles-GUIexperiment/index.html
+++ b/Examples/Example-03-rounded-rectangles-GUIexperiment/index.html
@@ -13,18 +13,18 @@
     <canvas id="myCanvas" resize></canvas>
        <div class ="box">
            <label for="Speed">Speed</label>
-           <input name="Speed" type="range" min="1" max="15" value="1" class="slider"
+           <input name="Speed" type="range" min="1" max="15" value="5" class="slider"
             id="speed-number"><br/><br/>
         </div>
         <div class ="box1">
             <label for="Twist">Twist</label>
-            <input name="Twist" type="range" min="20" max="50"
-            value="20" class="slider1" id="twist-number"><br/>
+            <input name="Twist" type="range" min="10" max="40"
+            value="10" class="slider1" id="twist-number"><br/>
         </div>
         <div class ="box2">
-            <label for="Roundness" id="label">Roundness</label>
+            <label for="Roundness" id="label">Roundness/points</label>
             <input name="Roundness" type="range" min="0"
-            max="12" value="0" class="slider2" id="roundness-number"><br/>
+            max="12" value="5" class="slider2" id="roundness-number"><br/>
         </div>
         <div class ="box3">
             <label class="container">Change shape
