--- a/Examples/Example-05-smoothing/index.html
+++ b/Examples/Example-05-smoothing/index.html
@@ -11,4 +11,11 @@
 </head>
 <body>
 		<canvas id="myCanvas" resize></canvas>
+		<!-- Background sound: silence (to trigger wind sound) -->
+		<iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+    
+		<!--Background sound: wind-->
+		<audio autoplay="autoplay" loop>
+				<source src="wind.mp3" />     
+			</audio>
 </body>
