--- a/Examples/Example-04-voronoi/index.html
+++ b/Examples/Example-04-voronoi/index.html
@@ -15,4 +15,11 @@
 </head>
 <body>
 	<canvas id="myCanvas" resize></canvas>
+	<!-- Background sound: silence (to trigger wind sound) -->
+	<iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+    
+	<!--Background sound: disco sound-->
+	<audio autoplay="autoplay" loop>
+			<source src="Disco.mp3" />     
+		</audio>
 </body>
